tests/negative/gold/prefixed2_test.gold
tests/negative/prefixed2_test.toit:6:3: error: Can't use prefix 'prefix' as an expression
  prefix = 499
  ^~~~~~
Compilation failed.
